# nDB

./: .dockerignore  .gitignore  .pending-promotions.md  Cargo.toml  Dockerfile  README.md  docker-compose.sharded.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.multi-session/: next-session-alphafold.md  next-session.md  session-last-ndb-architecture-foundation.md  session-last-ndb-productionization.md  streaming-executor.md
clients/mcp-npm/: README.md  package.json
clients/mcp-npm/test/: launch.test.js
clients/python/: README.md  pyproject.toml
clients/python/ndb_client/: __init__.py  client.py
clients/python/tests/: test_smoke.py
clients/ts/: README.md  package-lock.json  package.json  tsconfig.json
clients/ts/src/: index.ts
clients/ts/test/: integration.test.ts
crates/bench-race-sqlite-rust/: Cargo.toml
crates/bench-race-sqlite-rust/src/: main.rs
crates/ndb-arrow/: Cargo.toml
crates/ndb-arrow/src/: lib.rs
crates/ndb-cli/: Cargo.toml
crates/ndb-cli/src/: main.rs
crates/ndb-client-rust/: Cargo.toml
crates/ndb-client-rust/src/: lib.rs
crates/ndb-client-rust/tests/: round_trip.rs
crates/ndb-engine/: Cargo.toml
crates/ndb-engine/examples/: arity_storage.rs  basic.rs  bench_race.rs  exec_microbench.rs  index_mem_baseline.rs  realworld_bench.rs  scale_build.rs  vector_bench.rs  versioned.rs
crates/ndb-engine/src/: backup_archive.rs  block_index.rs  bloom.rs  capability.rs  codec.rs  compression.rs  db.rs  encryption.rs  engine.rs  error.rs  id.rs  lib.rs  memtable.rs  mvcc.rs  query.rs  record.rs  replication.rs  shared.rs  sstable.rs  validation.rs  value.rs  wal.rs  wire.rs  wire_query.rs
crates/ndb-engine/src/index/: adjacency.rs  entity_type_cluster.rs  id_list_index_file.rs  lookup_key.rs  mod.rs  property_btree.rs  property_index_file.rs  type_cluster.rs  vector.rs  vector_index_file.rs
crates/ndb-engine/src/query/: mod.rs  plan.rs
crates/ndb-engine/tests/: concurrency.rs  robustness.rs
crates/ndb-index-vector-hnsw/: Cargo.toml
crates/ndb-index-vector-hnsw/src/: lib.rs
crates/ndb-mcp-server/: Cargo.toml
crates/ndb-mcp-server/src/: http.rs  lib.rs  main.rs
crates/ndb-query/: Cargo.toml
crates/ndb-query/src/: ast.rs  error.rs  lex.rs  lib.rs  parse.rs  resolve.rs  run.rs
crates/ndb-renderer/: Cargo.toml
crates/ndb-renderer/examples/: render_smoke.rs  v21_demo.rs  v22_explorer.rs
crates/ndb-renderer/examples/biodiv_explorer/: main.rs  seed.json
crates/ndb-renderer/examples/chemistry_explorer/: main.rs  seed.json
crates/ndb-renderer/examples/exoplanet_explorer/: main.rs  seed.json
crates/ndb-renderer/examples/seismic_explorer/: main.rs  seed.json
crates/ndb-renderer/examples/v22_explorer/: main.rs  residues.rs
crates/ndb-renderer/src/: lib.rs  viz.rs
crates/ndb-router/: Cargo.toml
crates/ndb-router/src/: lib.rs  main.rs
crates/ndb-router/tests/: routing.rs
crates/ndb-server/: Cargo.toml
crates/ndb-server/src/: lib.rs  main.rs
crates/ndb-server/tests/: http_round_trip.rs
crates/ndb-slicer/: Cargo.toml
crates/ndb-slicer/examples/: scan_agg_bench.rs
crates/ndb-slicer/src/: batch.rs  gpu.rs  lib.rs  sum_reduce.wgsl
crates/ndb-studio/: Cargo.toml  README.md
crates/ndb-studio/src/: http.rs  identity.rs  jsonval.rs  lib.rs  main.rs  seed.rs  store.rs
crates/ndb-studio/web/: index.html
crates/nstack/: Cargo.toml
crates/nstack/src/: lib.rs
deploy/: README.md
deploy/helm/ndb/: Chart.yaml  values.yaml
deploy/sovereign/: README.md  ndb.env.example
deploy/sovereign/demo/: Cargo.toml  agent-memory.html
deploy/sovereign/demo/scheduler/: ndb-remember.service  ndb-remember.timer  remember.sh
deploy/sovereign/demo/src/: agent.rs  embed.rs  seed.rs  static_server.rs  vrecall.rs
deploy/sovereign/embed/: Cargo.toml
deploy/sovereign/ndb-edge/: Cargo.toml
deploy/sovereign/ndb-edge/src/: main.rs
deploy/sovereign/scripts/: install.sh  obtain-certs.sh
deploy/sovereign/systemd/: ndb-edge.service  ndb-mcp.service  ndb-server.service
docs/: CODEBASE.md  COMPATIBILITY.md  PRODUCTION.md  PROTOCOL.md  QUICKSTART.md  gpu-dgx-spark.md  hn-comment-opener.md  intro.md  nDB-whitepaper.md  ndb-vs-mariadb-storage-en.md  ndb-vs-mariadb-storage.md  roadmap-agent-gpu.md  v2.1-demo.html
docs/alphafold_nDB/: README.md  REPRODUCIBILITY.md
docs/architecture/: engine-lsm.md  production-readiness.md
docs/articles/: 2026-06-nDB-on-a-tiny-vps-journal.md
docs/assets/: gen_storage_charts.py
docs/benchmarks/: realworld-2026-05-28-ndb.json  realworld-2026-05-28-pg.json  realworld-2026-05-28.md
docs/biodiv/: index.html
docs/chemistry/: index.html
docs/exoplanet/: index.html
docs/explorer/: PERFORMANCE.md  index.html
docs/knowledge-site/: bench.html  demos-alphafold_ndb.html  demos-biodiv_ndb.html  demos-chemistry_ndb.html  demos-exoplanet_ndb.html  demos-langgraph_ndb.html  demos-seismic_ndb.html  demos.html  discussion-examples.html  discussion-nesting.html  discussion-storage.html  discussion.html  feedback.html  index.html  llms.txt  query-language.html  repo.html  server.py  whitepaper.html
docs/knowledge-site/static/: feedback-widget.css  feedback-widget.js  styles.css
docs/langgraph/: cloud-layer.js  graph.json  index.html
docs/seismic/: index.html
docs/specs/: 2026-05-29-first-100-demo-targets.md  2026-05-29-low-ram-core-option-b.md  2026-05-29-ndb-thesis-and-wedge.md  2026-05-31-nstack-architecture-design.md  2026-05-31-nstack-session-handoff.md
docs/superpowers/specs/: 2026-05-27-nDB-hypergraph-design.md  2026-05-27-query-language.md  2026-05-27-v2-1-working-spec.md  (+6 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: record_decode.rs  value_decode.rs
tools/bench/: race_pg_server.py  race_sqlite_server.py  realworld_pg.py  render_realworld.py  run_realworld.sh
tools/biodiv/: build_seed.py  interactions.py
tools/chemistry/: build_seed.py  reactions.py
tools/exoplanet/: build_seed.py
tools/langgraph/: Cargo.toml  serve.sh
tools/langgraph/data/: openalex-ml.json
tools/langgraph/src/: main.rs  server.rs
tools/seismic/: build_seed.py  fetch_historic.py
(+6 files in other folders)
