[workspace]
resolver = "3"
members = [
    "crates/ndb-engine",
    "crates/ndb-server",
    "crates/ndb-cli",
    "crates/ndb-slicer",
    "crates/ndb-renderer",
    "crates/ndb-mcp-server",
]

[workspace.package]
edition      = "2024"
version      = "0.1.0"
rust-version = "1.95"
authors      = ["nDB contributors"]
repository   = "https://github.com/goldrag1/nDB"
license      = "Apache-2.0"

[workspace.dependencies]
base64     = "0.22"
crc32fast  = "1.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1.10", features = ["v7"] }

[workspace.lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pragmatic relaxations; revisit when the surface stabilises.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

[profile.release]
lto           = "thin"
codegen-units = 1
debug         = "line-tables-only"

[profile.bench]
inherits = "release"
