[package]
name         = "ndb-engine"
description  = "nDB append-only LSM storage core for the n-dimensional hypergraph database engine"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }

[lib]
name = "ndb_engine"
path = "src/lib.rs"

[dependencies]
base64     = { workspace = true }
crc32fast  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
aes-gcm    = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
rand_core  = { version = "0.6", features = ["getrandom"] }

[lints]
workspace = true
