[package]
name         = "ndb-mcp-server"
description  = "nDB Model Context Protocol server — AI agent bridge via stdio JSON-RPC"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }

[lib]
name = "ndb_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "ndb-mcp-server"
path = "src/main.rs"

[dependencies]
ndb-engine = { path = "../ndb-engine" }
ndb-server = { path = "../ndb-server" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }

[lints]
workspace = true
