[package]
name         = "ndb-mcp-server"
description  = "nDB Model Context Protocol server — AI agent bridge via stdio or Streamable HTTP(S)"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }

[lib]
name = "ndb_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "ndb-mcp-server"
path = "src/main.rs"

[dependencies]
ndb-engine = { path = "../ndb-engine" }
ndb-server = { path = "../ndb-server" }
ndb-arrow  = { path = "../ndb-arrow" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
base64     = "0.22"
# TLS termination for the Streamable HTTP transport (mirrors ndb-server).
rustls         = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = "2"

[lints]
workspace = true
