[package]
name         = "ndb-renderer"
description  = "nDB text/CSV/TSV renderer for slicer tables (§17.1, 2D outputs)"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }

[lib]
name = "ndb_renderer"
path = "src/lib.rs"

[dependencies]
base64     = { workspace = true }
ndb-engine = { path = "../ndb-engine" }
ndb-slicer = { path = "../ndb-slicer" }

[dev-dependencies]
# Only the v22_explorer example needs ndb-server; keeping it as a
# dev-dep avoids forcing every consumer of ndb-renderer to link the
# HTTP server. uuid is for tempdir naming in the example's tests.
ndb-server = { path = "../ndb-server" }
uuid       = { workspace = true }

[lints]
workspace = true
