[package]
name         = "ndb-renderer"
description  = "nDB text/CSV/TSV renderer for slicer tables (§17.1, 2D outputs)"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }

[lib]
name = "ndb_renderer"
path = "src/lib.rs"

[dependencies]
base64     = { workspace = true }
ndb-engine = { path = "../ndb-engine" }
ndb-slicer = { path = "../ndb-slicer" }

[dev-dependencies]
# The v22_explorer + exoplanet_explorer examples need ndb-server;
# keeping it as a dev-dep avoids forcing every consumer of ndb-renderer
# to link the HTTP server. serde_json is for the exoplanet seed
# (curated JSON from NASA Exoplanet Archive — see tools/exoplanet).
ndb-server = { path = "../ndb-server" }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }

[lints]
workspace = true
