[package]
name         = "ndb-server"
description  = "nDB HTTP server — wire-protocol bridge to ndb-engine"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }

[lib]
name = "ndb_server"
path = "src/lib.rs"

[[bin]]
name = "ndb-server"
path = "src/main.rs"

[dependencies]
ndb-engine     = { path = "../ndb-engine" }
ndb-query      = { path = "../ndb-query" }
ndb-arrow      = { path = "../ndb-arrow" }
ndb-client-rust = { path = "../ndb-client-rust" }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true }
rustls         = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = "2"

[dev-dependencies]
rcgen = "0.13"

[lints]
workspace = true
