[package]
name         = "ndb-slicer"
description  = "nDB CPU projection + aggregation slicer (§7, §17.1)"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
license      = { workspace = true }

[lib]
name = "ndb_slicer"
path = "src/lib.rs"

[features]
# Optional GPU compute kernel for global numeric reductions. Off by
# default: it pulls in wgpu and only pays off for very large scans on a
# machine with a real GPU adapter. The CPU path is always available and
# is the fallback when no adapter is found.
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
ndb-engine = { path = "../ndb-engine" }
wgpu       = { version = "22", optional = true }
pollster   = { version = "0.3", optional = true }
bytemuck   = { version = "1", optional = true, features = ["derive"] }

[lints]
workspace = true
