[package]
name         = "ndb-studio"
version      = "0.1.0"
edition      = { workspace = true }
rust-version = { workspace = true }
description  = "nDB Studio — open any nDB as familiar tables, creative projections, and versioned edits with time-travel."

[[bin]]
name = "ndb-studio"
path = "src/main.rs"

[lib]
name = "ndb_studio"
path = "src/lib.rs"

[dependencies]
ndb-engine = { path = "../ndb-engine" }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }

[lints]
workspace = true
