[package]
name         = "langgraph"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
license.workspace      = true
description  = "Rust-native GraphRAG-style language-graph ingestor for nDB demos — writes through the embedded engine, no seed.json hop"

[[bin]]
name = "langgraph-ingest"
path = "src/main.rs"

# Application-layer view server: embeds the nDB core and serves bounded,
# zoom-driven /view/* tiles. Generic engine, app-specific query shapes.
[[bin]]
name = "langgraph-server"
path = "src/server.rs"

[dependencies]
ndb-engine = { path = "../../crates/ndb-engine" }
# App-layer ANN index (depends on ndb-engine) — the optional "approximate"
# kNN backend; the engine itself stays exact-only / generic.
ndb-index-vector-hnsw = { path = "../../crates/ndb-index-vector-hnsw" }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
# Outbound HTTPS to the OpenAlex API. ureq (blocking, no async runtime) is
# right-sized for a build-time tool; isolated to this crate so it never
# touches the engine's dependency tree. `gzip` makes the API serve gzipped
# pages (~7.3× smaller on the wire) — the difference between a feasible and
# an infeasible bulk fetch on this link.
ureq = { version = "2", features = ["json", "gzip"] }
# Gzip the on-disk spool so the projected slice fits the disk budget
# (~1KB/record gzip vs ~7KB plain → ~12.6GB not ~90GB for 12.3M works).
flate2 = "1"

[lints]
workspace = true
