# nDB demo tooling — all Rust, to match the all-Rust stack.
#   ndb-seed   : seed the agent-memory graph over the MCP HTTP transport
#   ndb-static : tiny static-file server for the demo web UI (behind the edge)
# Standalone (empty [workspace]) so it never touches the main nDB build.
[workspace]

[package]
name    = "ndb-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "ndb-seed"
path = "src/seed.rs"

[[bin]]
name = "ndb-static"
path = "src/static_server.rs"

[[bin]]
name = "ndb-agent"
path = "src/agent.rs"

[dependencies]
serde_json = "1"

[profile.release]
opt-level = 2
